kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-lite-api
  labels:
    app: kubernetes-lite-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-lite-api
  template:
    metadata:
      labels:
        app: kubernetes-lite-api
    spec:
      containers:
        - name: kubernetes-lite-api
          image: kubernetes-lite-api:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
