kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-lite-api
spec:
  selector:
    app: kubernetes-lite-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
